# Quadcopter

./: .gitignore  .travis.yml  .travis.yml.backup  README.md  run.py  target_build.sh
FlightController/: CMakeLists.txt
FlightController/Utils/: LUT_cos.h  atanLUT.h  binarySearch.m  binarySearchIterative.m  testBinarySearch.m  tests.m
FlightController/cmake/: utils.cmake
FlightController/cmake/Platform/: Arduino.cmake
FlightController/core/: ArduinoFC.cpp  CMakeLists.txt  GlobalVariables.cpp  MainLoop.cpp  Test.cpp
FlightController/core/include/core/: ArduinoFC.h  Config.h  MainLoop.h  Test.h  Types.h
FlightController/doc/Report/: report.tex
FlightController/doc/Report/Sections/: Control.tex  Hardware.tex  Specifications.tex
FlightController/hal/arduino/: ADC.cpp  ArduinoFC.cpp  ArduinoFC.ino  CMakeLists.txt  Control.cpp  EEPROM.cpp  GPIO.cpp  GPS.cpp  GlobalVariables.cpp  HAL.cpp  HC-SR04.cpp  HMC5883L.cpp  I2C.cpp  MPU6050.cpp  MS5611.cpp  Madgwick.cpp  Mahony.cpp  MainLoop.cpp  RC.cpp  SM_States.cpp  SoftPWM.cpp  StateEstimation.cpp  StateMachine.cpp  Telemetry.cpp  Test.cpp  Utils.cpp
FlightController/hal/arduino/include/: ADC.h  ArduinoFC.h  Control.h  EEPROM.h  GPIO.h  GPS.h  GlobalVariables.h  HAL.h  (+17 more)
FlightController/main/: CMakeLists.txt  main.cpp
FlightController/modules/: CMakeLists.txt
FlightController/modules/control/: CMakeLists.txt  Control.cpp  pid.cpp
FlightController/modules/state_estimation/: CMakeLists.txt  Madgwick.cpp  Mahony.cpp  StateEstimation.cpp
FlightController/modules/state_machine/: CMakeLists.txt  SM_States.cpp  StateMachine.cpp  sm_state.cpp  sm_state_armedacro.cpp  sm_state_disarmed.cpp  sm_state_passthrough.cpp  sm_state_poweron.cpp
FlightController/src/: StateEstimation.cpp  Test.cpp
FlightController/test/: CMakeLists.txt  test1.cpp
(+162 files in other folders)
